Bug 401431 - Color of applet-window-buttons is not painted correctly
Summary: Color of applet-window-buttons is not painted correctly
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: containment (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-26 13:55 UTC by trmdi
Modified: 2018-12-09 17:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video (90.05 KB, video/mp4)
2018-12-09 04:39 UTC, trmdi
Details

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Michail Vourlakos 2018-12-09 00:00:20 UTC
is this still valid in your system?
Comment 2 trmdi 2018-12-09 04:25:59 UTC
Yes, it's still like that. Tried with your layout and the default Breeze look&feel.
Comment 3 trmdi 2018-12-09 04:28:58 UTC
When the bug happens, if I change the focus to an unmaximized window, the color will be right. If I maximize then unmaximize that window, the color will be wrong.
Comment 4 trmdi 2018-12-09 04:32:15 UTC
When I change the focus to an unmaximized window, the color will be right like I said above, but if I hover the mouse on that button, the color becomes wrong again.
Comment 5 trmdi 2018-12-09 04:39:28 UTC
Created attachment 116796 [details]
Video
Comment 6 Michail Vourlakos 2018-12-09 17:00:51 UTC
Git commit 74238dba6ffb895968bbc94dcb168d9eb69857da by Michail Vourlakos.
Committed on 09/12/2018 at 16:56.
Pushed by mvourlakos into branch 'master'.

improve color schemes handling for default values

--when color schemes from themes are used there are
cases that the WM records do not correspond to the
colors that the plasma theme will use. In such cases
the color scheme file that is passed to applets can
create colors inconsistencies. For this reason we
update the default color scheme in order for its
WM values to be consistent with the plasma theme.
For the record plasma theme is using Colors:View
group for its main colors.

M  +90   -47   app/plasmathemeextended.cpp
M  +6    -3    app/plasmathemeextended.h

https://commits.kde.org/latte-dock/74238dba6ffb895968bbc94dcb168d9eb69857da